--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: #f0f0f0;
+    background: #226bd9;
     display: flex;
     justify-content: center;
     align-items: center;
